# trace-downloader

./: .gitattributes  .gitignore  LICENSE  README.md  com.tracegrabber.plist  config.yaml  login.py  probe_discover.py  pyproject.toml
.github/workflows/: build.yml
assets/: icon.icns  make_icon.py
gui/: app.py  entry.py  viewmodel.py  worker.py
gui/web/: app.js  index.html  setup.html  style.css
packaging/: TraceDownloader.spec  entitlements.plist  entry.py  fetch_ffmpeg.py  make_app.sh
src/trace_grabber/: accounts.py  combine.py  config.py  download.py  firstrun.py  games.py  main.py  naming.py  paths.py  platform_tasks.py  progress.py  quality.py  selectors.py  session.py  state.py  streams.py  tools.py
tests/: test_accounts.py  test_combine.py  test_config.py  test_download.py  test_firstrun.py  test_games.py  test_last_run.py  test_naming.py  test_paths.py  test_platform_tasks.py  test_progress.py  test_quality.py  test_session.py  test_state.py  test_streams.py  test_tools.py  test_viewmodel.py
tests/fixtures/: games_sample.html
