[project]
name = "trace-grabber"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "platformdirs>=4",
    "pyyaml>=6",
    "pywebview>=5",
    "pillow>=10",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pyinstaller>=6"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
